# django-social-network

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
chat/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_message_is_read.py
chat/templates/chat/: chat_detail.html  chat_list.html
chat/templates/includes/: inc_network_chat_list.html
chat/templatetags/: my_tags.py
chat/tests/: test_chat.py  test_message.py
config/: settings.py  urls.py
dev/: docker-compose.dev.yml
friendship/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
friendship/migrations/: 0001_initial.py
network/: admin.py  apps.py  forms.py  menu.py  models.py  tests.py  urls.py  views.py
network/migrations/: 0001_initial.py
network/templates/includes/: inc_network_chat_list.html  inc_network_menu.html
network/templates/network/: base.html  chat_detail.html  chat_list.html
static/css/: chat.css  users.css
users/: checkers.py  forms.py  middlewares.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_gender.py  0003_user_last_activity_user_status.py  0004_alter_user_avatar.py
users/templates/includes/: inc_user_card.html  inc_users_auth.html  inc_users_menu.html
users/templates/users/: base_user_list.html  login.html  registration.html  user_detail.html  (+5 more)
users/templatetags/: users_tags.py
(+6 files in other folders)
